<resources>
    <string name="app_name">Food Cart</string>

    <string name="app_sub_name">Order from app &amp; get 10% off</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="isRTL">false</string>

    <string name="rupee">¢</string>
    <string name="rupeetext">¢ 300</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="title_cart">My Cart</string>
    <string name="title_coupon">Apply Coupon</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="action_gallery">Choose from gallery</string>
    <string name="action_camera">Camera</string>
    <string name="label_select_img">Select Image</string>

    <string name="developed_by">Developed by</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="internet_connection_message">Internet connection not available check your internet connection</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="cannot_use_save_permission">Can not use location futcher</string>
    <string name="exit">Exit</string>

    <string name="view_all">View All</string>
    <string name="no_data_found">No Data Found</string>

    <string name="app_name_about_us">abcd</string>
    <string name="about_us_version">Version</string>
    <string name="about_us_version_text">1.0</string>
    <string name="about_us_author">Author</string>
    <string name="about_us_Company">Company</string>
    <string name="about_us_company_name">RnD Technosoft</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">hello@rndtechnosoft.com</string>
    <string name="about_us_website">Website</string>
    <string name="about_us_website_text">www.rndtechnosoft.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">+91 7304945823</string>
    <string name="about_us_about">About</string>

    <!--<RoomDetail string>-->
    <string name="Book_Now">Book Now</string>
    <!--<RoomDetail string>-->

    <!--<ContactUs string>-->
    <string name="contactUs_name">Name</string>
    <string name="contactUs_dob">Date of Birth</string>
    <string name="contactUs_description">Description</string>
    <string name="contactUs_subject">Subject</string>
    <string name="contactUs_phoneNo">Phone No</string>
    <string name="contactUs_email">Email</string>
    <string name="Button_Submit_ContactUs">Submit</string>
    <!--<ContactUs string>-->

    <!--<ContactUs Validation string>-->
    <string name="name_ContactUs">enter name</string>
    <string name="email_ContactUs">enter valid email address</string>
    <string name="phoneNumber_contactUs">enter phone number</string>
    <string name="subject_ContactUs">enter subject</string>
    <string name="description_ContactUs">enter description</string>
    <!--<ContactUs Validation string>-->

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus.
        Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie.
    </string>

    <string name="no_order">Your Cart is Empty.</string>
    <string name="action_clear">Clear Cart</string>
    <string name="confirm">Confirmation</string>
    <string name="clear_all_order">Do you want to clear your all order?</string>
    <string name="clear_one_order">Do you want to clear this item?</string>
    <string name="title_checkout">Confirm Order</string>
    <string name="failed_connect_network">Failed to connect internet!</string>
    <string name="order_alert">You have not ordered yet</string>
    <string name="sending_alert">Placing Order. Please wait..</string>
    <string name="placing_order">Placing Order. Please Wait..</string>
    <string name="no_order_menu">No order</string>

    <string name="title_confirm">Order Placed</string>

    <string name="checkout_your_name">Your Name</string>
    <string name="checkout_number_of_people">Number of People</string>
    <string name="Roomno">Room number</string>
    <string name="address1">Address</string>
    <string name="checkout_email">Your Email</string>
    <string name="checkout_set_date">Set Date</string>
    <string name="checkout_set_time">Set Time</string>
    <string name="checkout_phone_number">Phone Number</string>
    <string name="checkout_order_list">Order Detail</string>
    <string name="checkout_add_comment">Comment</string>
    <string name="checkout_send_order">Submit</string>

    <string name="db_exist_alert">Do you want to remove your previous order?</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="action_cart">Cart</string>
    <string name="select_room">Please select room number</string>
    <string name="entername">Please enter name</string>
    <string name="enterphone">Please enter phone number</string>
    <string name="enteremail">Please enter email id</string>
    <string name="tenphone">Please enter 10 digit phone number</string>
    <string name="enteradd">Please enter Address</string>
    <string name="myorders">My Orders</string>
    <string name="error_field_empty">Required field is empty</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="enter_your_dob">Please enter your dob</string>

    <string name="error_small_fullname">Minimum 2 characters</string>
    <string name="wrong_format">Invalid mobile number</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="enterdob">Please enter Birth Date</string>
    <string name="enterdoa">Please enter Anniversary Date</string>
    <string name="update">Update Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enterlocation">Please enter Location</string>
    <string name="entergender">Please select Gender</string>
    <string name="applycoupon">Apply Coupon</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="wallet">Wallet</string>
</resources>
