<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"


                        android:src="@drawable/splash_screen" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/form_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/contact_us_background">

                        <EditText
                            android:id="@+id/textView_name_contactUS_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="#00000000"
                            android:hint="@string/contactUs_name"
                            android:inputType="text|textCapWords"
                            android:maxLines="1"
                            android:textColor="@color/enterText_contactUs_fragment" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/contact_us_background">

                        <EditText
                            android:id="@+id/textView_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="#00000000"
                            android:hint="@string/contactUs_dob"
                            android:inputType="date"
                            android:maxLines="1"
                            android:focusable="false"
                            android:textColor="@color/enterText_contactUs_fragment" />

                    </LinearLayout>


                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/contact_us_background">

                        <EditText
                            android:id="@+id/textView_phoneNo_contactUS_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="#00000000"
                            android:hint="@string/contactUs_phoneNo"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:textColor="@color/enterText_contactUs_fragment" />

                    </LinearLayout>


                    <Button
                        android:id="@+id/send_otp"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/button_background"
                        android:text="@string/Button_Submit_ContactUs"
                        android:textColor="@color/button_text_contactUs_fragment"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/otp_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/contact_us_background">

                        <EditText
                            android:id="@+id/otp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="#00000000"
                            android:hint="OTP"
                            android:inputType="number"
                            android:maxLength="6"
                            android:maxLines="1"
                            android:textColor="@color/enterText_contactUs_fragment" />

                    </LinearLayout>


                    <Button
                        android:id="@+id/submit"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/button_background"
                        android:text="@string/Button_Submit_ContactUs"
                        android:textColor="@color/button_text_contactUs_fragment"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                      >

                    <TextView
                        android:id="@+id/resendOtp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="15dp"
                        android:layout_gravity="center_horizontal"
                        android:text="Resend OTP"
                        android:textColor="@color/colorPrimaryDark" />
                    <TextView
                        android:id="@+id/skip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="15dp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:text="Skip and timer"
                        android:textColor="@color/colorPrimaryDark"
                        android:visibility="gone"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>
    <ProgressBar
        android:id="@+id/progresbar_home_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="visible" />

</RelativeLayout>